# smart-pv-meter

./: .gitignore  ANALYSE_SOLAR_OPTIMIZER.md  ANALYSE_TECHNIQUE_SO_POUR_SPVM.md  BRANDS_PR_GUIDE.md  CHANGELOG.md  CONFIG_UTILISATEUR.md  CONTRIBUTING.md  DELIVRY.md  DIAGNOSTIC.md  DIAGNOSTIC_SO_APPROFONDI.md  DIAGNOSTIC_SO_DOUBLE_CHAUFFE_EAU.md  DIAGNOSTIC_SO_SOUS_UTILISATION.md  LICENSE  PARAMETRES_CORRECTION.md  README.md  STRUCTURE_CHECK.md  diagnostic_script.py  hacs.json  prepare_brand_assets.py  pyproject.toml
.github/workflows/: release.yml
custom_components/spvm/: __init__.py  config_flow.py  const.py  const_old.py  coordinator.py  diagnostic.py  diagnostics.py  expected.py  helpers.py  manifers.json  manifest.json  open_meteo.py  sensor.py  services.yaml  solar_model.py
custom_components/spvm/tests/: test_units.py
custom_components/spvm/translations/: en.json  fr.json  strings.json
scripts/: bump_version.sh
