[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.black]
line-length = 100
target-version = ['py313']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
